Skin: Fix statusbar using wrong background variable
(integrated from master branch change c7cc7ad by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -155,7 +155,7 @@ window:not([view-type="editor"])
 statusbar#statusbarviewbox
 {
     -moz-appearance: none !important;
-    background: @background !important;
+    background: @_background !important;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)) !important;
     color: @foreground !important;
     border: 0 !important;
